--- a/index-travel.html
+++ b/index-travel.html
@@ -105,7 +105,7 @@
                 <!--Why Us-->
                 <section id="why-us" class="block background-color-white">
                     <div class="container">
-                        <header><h2>Why Us?</h2></header>
+                        <header><h2>Quem Somos OU Porque Nos?</h2></header>
                         <div class="row">
                             <div class="col-md-4 col-sm-4">
                                 <div class="feature-box">
@@ -184,78 +184,8 @@
                         <div class="row">
                             <div class="col-md-4 col-sm-4">
                                 <!--New Items-->
-                                <section>
-                                    <h2>New Items</h2>
-                                    <a href="travel-item-detail.html" class="item-horizontal small">
-                                        <h3>Elite Canyon Hotel</h3>
-                                        <figure>France</figure>
-                                        <div class="wrapper">
-                                            <div class="image"><img src="assets/img/items/travel/8.jpg" alt=""></div>
-                                            <div class="info">
-                                                <div class="type date">
-                                                    <span>15.2. - 22.2.2015</span>
-                                                </div>
-                                                <div class="rating stars-hidden" data-rating="4"></div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <!--/.item-horizontal small-->
-                                    <a href="travel-item-detail.html" class="item-horizontal small">
-                                        <h3>Pacific Pass Resort</h3>
-                                        <figure>Italy</figure>
-                                        <div class="wrapper">
-                                            <div class="image"><img src="assets/img/items/travel/2.jpg" alt=""></div>
-                                            <div class="info">
-                                                <div class="type date">
-                                                    <span>15.2. - 22.2.2015</span>
-                                                </div>
-                                                <div class="rating stars-hidden" data-rating="3"></div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <!--/.item-horizontal small-->
-                                </section>
-                                <!--end New Items-->
-                            </div>
-                            <div class="col-md-4 col-sm-4">
-                                <!--Recent Reviews-->
-                                <section>
-                                    <h2>Recent Reviews</h2>
-                                    <a href="travel-item-detail.html#reviews" class="review small">
-                                        <h3>Max Five Lounge</h3>
-                                        <figure>Egypt</figure>
-                                        <div class="info">
-                                            <div class="rating" data-rating="4"></div>
-                                            <div class="type date">
-                                                <i><img src="assets/icons/restaurants-bars/restaurants/restaurant.png" alt=""></i>
-                                                <span>Restaurant</span>
-                                            </div>
-                                        </div>
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non suscipit felis, sed sagittis tellus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras ac placerat mauris.
-                                        </p>
-                                    </a><!--/.review-->
-                                    <a href="travel-item-detail.html#reviews" class="review small">
-                                        <h3>Saguaro Tavern</h3>
-                                        <figure>Tunisia</figure>
-                                        <div class="info">
-                                            <div class="rating" data-rating="5"></div>
-                                            <div class="type date">
-                                                <i><img src="assets/icons/restaurants-bars/restaurants/restaurant.png" alt=""></i>
-                                                <span>Restaurant</span>
-                                            </div>
-                                        </div>
-                                        <p>
-                                            Pellentesque mauris. Proin sit amet scelerisque risus. Donec semper semper erat ut mollis curabitur
-                                        </p>
-                                    </a>
-                                    <!--/.review-->
-                                </section>
-                                <!--end Recent Reviews-->
-                            </div>
-                            <div class="col-md-4 col-sm-4">
-                                <section>
-                                    <h2>About Us</h2>
+                                 <section>
+                                    <h2>Fale Conosco</h2>
                                     <address>
                                         <div>Max Five Lounge</div>
                                         <div>63 Birch Street</div>
@@ -272,17 +202,29 @@
                                             <div class="info">
                                                 <i class="fa fa-globe"></i>
                                                 <a href="#">www.maxfivelounge.com</a>
+
                                             </div>
+
                                         </figure>
                                     </address>
-                                    <div class="social">
+                                  <a href="contact.html" class="btn framed icon">Contact Us<i class="fa fa-angle-right"></i></a>
+                                </section>
+                                <!--end New Items-->
+                            </div>
+                            <div class="col-md-4 col-sm-4">
+                                <!--Recent Reviews-->
+                               
+                                <!--end Recent Reviews-->
+                            </div>
+                            <div class="col-md-4 col-sm-4">
+                                 <div class="social">
                                         <a href="#" class="social-button"><i class="fa fa-twitter"></i></a>
                                         <a href="#" class="social-button"><i class="fa fa-facebook"></i></a>
                                         <a href="#" class="social-button"><i class="fa fa-pinterest"></i></a>
+
                                     </div>
 
-                                    <a href="contact.html" class="btn framed icon">Contact Us<i class="fa fa-angle-right"></i></a>
-                                </section>
+                                    
                             </div>
                             <!--/.col-md-4-->
                         </div>
@@ -293,7 +235,7 @@
                 <!--/.footer-top-->
                 <div class="footer-bottom">
                     <div class="container">
-                        <span class="left">(C) ThemeStarz, All rights reserved</span>
+                        <span class="left">(C) ExtraBits, All rights reserved</span>
                             <span class="right">
                                 <a href="#page-top" class="to-top roll"><i class="fa fa-angle-up"></i></a>
                             </span>
